--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>Bikcraft - Bicicletas Eletricas</title>
-  <meta name="Description" content="Bicicletas Eletricas" />
+  <meta name="Description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a bikcraft.">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+  <header class="header-bg">
+    <div class="header">
+
+      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
+      <nav aria-label="primaria">
+        <ul class="header-menu">
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
 </body>
 
