--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>Bikcraft - Bicicletas Eletricas</title>
   <meta name="Description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a bikcraft.">
-  <link rel="stylesheet" href="./css/style.css">
+
+  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <script>document.documentElement.classList.add('js'); </script>
 </head>
 
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
 
-      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu font-1-m cor-w">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
@@ -23,18 +30,163 @@
       </nav>
     </div>
   </header>
-  <main class="intro-bg">
-    <div class="intro">
+  <main class="intro-bg ">
+    <div class=" container intro">
       <div class="intro-content">
-        <h1> Bicicletas feitas sob medida<span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a href="./bicicletas.html">Escolha a sua</a>
+        <h1 class="font-1-xxl cor-w fadeInDown" data-anime="200"> Bicicletas feitas sob medida<span class=" cor-p1">.</span></h1>
+        <p class="font-2-l cor-c5 fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao fadeInDown" data-anime="600" href="./bicicletas.html">Escolha a sua</a>
       </div>
-      <img src="./img/fotos/introducao.jpg" alt="Bicicleta Eletrica Preta">
+      <picture class="fadeInDown " data-anime="800">
+        <source media="(max-width:800px)" srcset="./img/bicicletas/nimbus.jpg">
+        <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta Eletrica Preta">
+      </picture>
     </div>
-
   </main>
-
+  <article class="bicicletas-lista">
+    <h2 class="container font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h2>
+    <ul>
+      <li>
+        <a href="./bicicletas/magic.html">
+          <img src="./img/bicicletas/magic-home.jpg" width="920" height="1040" alt="Bicicletas magic">
+          <h3 class="font-1-xl">Magic Might</h3>
+          <span class="font-2-m cor-c8">R$ 2499 </span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicicletas/nimbus.html">
+          <img src="./img/bicicletas/nimbus-home.jpg" width="920" height="1040" alt="Bicicletas magic">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-c8">R$ 4999 </span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicicletas/nebula.html">
+          <img src="./img/bicicletas/nebula-home.jpg" width="920" height="1040" alt="Bicicletas magic">
+          <h3 class="font-1-xl">Nebula Cosmic</h3>
+          <span class="font-2-m cor-c8">R$ 3999 </span>
+        </a>
+      </li>
+    </ul>
+  </article>
+  <article class="tecnologia-bg">
+    <div class="tecnologia container">
+      <div class="tecnologia-content">
+        <span class="font-2-l-b cor-c5">Tecnologia Avançada</span>
+        <h2 class="font-1-xxl cor-w">Você escolhe suas cores e componentes<span class="cor-p1">.</span></h2>
+        <p class="font-2-l cor-c5">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+        <a class="link" href="./bicicletas.html">Escolha um modelo</a>
+        <div class="tecnologia-vantagens">
+          <div>
+            <img src="./img/icones/eletrica.svg" width="32" height="32" alt="eletrica">
+            <h3 class="font-1-m cor-w">Motor Elétrico</h3>
+            <p class="font-2-s cor-c5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+          </div>
+          <div>
+            <img src="./img/icones/rastreador.svg" width="32" height="32" alt="rastreador">
+            <h3 class="font-1-m cor-w">Rastreador</h3>
+            <p class="font-2-s cor-c5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+          </div>
+        </div>
+      </div>
+      <div class="tecnologia-img ">
+        <img src="./img/fotos/tecnologia.jpg" width="1200" height="1920" alt="tecnologia">
+      </div>
+    </div>
+  </article>
+  <section class="parceiros" aria-label="Nossos Parceiros">
+    <h2 class="font-1-xxl container">Nossos Parceiros<span class="cor-p1">.</span></h2>
+    <ul>
+      <li><img src="./img/parceiros/caravan.svg" width="140" height="38" alt="patrocinador"></li>
+      <li><img src="./img/parceiros/ranek.svg" width="149" height="36" alt="patrocinador"></li>
+      <li><img src="./img/parceiros/handel.svg" width="139" height="50" alt="patrocinador"></li>
+      <li><img src="./img/parceiros/dogs.svg" width="152" height="39" alt="patrocinador"></li>
+      <li><img src="./img/parceiros/flexblog.svg" width="165" height="38" alt="patrocinador"></li>
+      <li><img src="./img/parceiros/surfbot.svg" width="200" height="49" alt="patrocinador"></li>
+      <li><img src="./img/parceiros/wildbeast.svg" width="196" height="34" alt="patrocinador"></li>
+      <li><img src="./img/parceiros/lescone.svg" width="208" height="41" alt="patrocinador"></li>
+    </ul>
+  </section>
+  <section class="depoimento">
+    <div>
+      <img src="./img/fotos/depoimento.jpg" width="1560" height="1360" alt="mulher andando em bicicleta">
+    </div>
+    <div class="depoimento-content">
+      <blockquote class="font-1-xxl cor-p5">
+        <p class="">Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.
+        </p>
+        <span class="font-1-m-b cor-p4">Ana Júlia</span>
+      </blockquote>
+    </div>
+  </section>
+  <article class="seguros-bg">
+    <div class="seguros container">
+      <h2 class="font-1-xxl cor-w">Seguros<span class="cor-p1">.</span></h2>
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-c6">PRATA</h3>
+        <span class="font-1-xl cor-w">R$ 199<span class="font-1-xs cor-c6">mensal</span></span>
+        <ul class="font-2-m cor-w">
+          <li>Duas trocas por ano</li>
+          <li>Assistência Técnica</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura Estadual</li>
+        </ul>
+        <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+      </div>
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-p1">OURO</h3>
+        <span class="font-1-xl cor-w">R$ 299<span class="font-1-xs cor-c6">mensal</span></span>
+        <ul class="font-2-m cor-w">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao Clube Bikcraft</li>
+        </ul>
+        <a class="botao" href="./orcamento.html">Inscreva-se</a>
+      </div>
+    </div>
+  </article>
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
+      <div class="footer-contato">
+        <h3 class="font-2-l-b cor-w">Contato</h3>
+        <ul class="font-2-m cor-c5">
+          <li><a href="tel:+5579991555677">+55 79 99155-5677</a></li>
+          <li><a href="mailto:pegatampa001@gmail.com">pegatampa001@gmail.com</a></li>
+          <li>Rua Ali Perto, 42 - Botafogo</li>
+          <li>Rio de Janeiro - RJ </li>
+        </ul>
+        <div class="footer-redes">
+          <a href="./">
+            <img src="./img/redes/instagram.svg" width="32" height="32">
+          </a>
+          <a href="./">
+            <img src="./img/redes/facebook.svg" width="32" height="32">
+          </a>
+          <a href="./">
+            <img src="./img/redes/youtube.svg" width="32" height="32">
+          </a>
+        </div>
+      </div>
+      <div class="footer-info">
+        <h3 class="font-2-l-b cor-w">Informações</h3>
+        <nav>
+          <ul class="font-1-m cor-c5">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy font-2-m cor-c6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+  </footer>
+  <script src="./js/plugins/simple-anime.js"></script>;
+  <script src=" ./js/script.js"></script>
 </body>
 
 </html>
